--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + Vue</title>
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <title>中山評論大小聲</title>
+  <link rel="icon" type="image/svg+xml" href="./src/assets/images/logo.png" />
 </head>
 
 <body>
